# mirageia

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.example.toml  install.sh
.github/workflows/: ci.yml  release.yml
bucket/: mirageia.json
dictionaries/: firstnames.json  lastnames.json
docker/: Dockerfile  README.md  entrypoint.sh
docs/: README.md
docs/en/: contributing.md  deployment-ops.md  dev-linux.md  distribution.md  installation.md
docs/en/architecture/: detailed-architecture.md  overview.md  pseudonymization-flow.md
docs/en/audit/: project-analysis-2026-04-06.md
docs/en/security/: security-analysis.md
docs/en/technical/: document-extraction.md  http-proxy.md  onnx-integration.md  pii-model.md
docs/fr/: README.md  contribution.md  deploiement-ops.md  dev-linux.md  distribution.md  installation.md
docs/fr/architecture/: architecture-detaillee.md  flux-pseudonymisation.md  vue-ensemble.md
docs/fr/securite/: analyse-rssi.md
docs/fr/technique/: extraction-documents.md  modele-pii.md  onnx-integration.md  proxy-http.md
docs/officiel/: deploiement-ops.md  distribution.md  installation.md
docs/officiel/architecture/: architecture-detaillee.md
docs/officiel/technique/: modele-pii.md  proxy-http.md
docs/recherche/: etat-de-lart.md  extension-saas.md
docs/tickets/: README.md  TICKET-001-SETUP-PROJET-RUST-TAURI.md  TICKET-002-INTEGRATION-MODELE-ONNX.md  TICKET-003-PIPELINE-PSEUDONYMISATION.md
src/: lib.rs  main.rs  update.rs
src/config/: settings.rs
src/detection/: error.rs  mod.rs  model.rs  model_manager.rs  postprocess.rs  regex_detector.rs  tokenizer.rs  types.rs  validator.rs
src/extraction/: docx.rs  mod.rs  pdf.rs
src/mapping/: crypto.rs  error.rs  mod.rs  table.rs
src/proxy/: client.rs  error.rs  extractor.rs  mod.rs  router.rs  server.rs
src/pseudonymization/: depseudonymizer.rs  dictionaries.rs  fragment_restorer.rs  generator.rs  mod.rs  replacer.rs
src/setup/: mod.rs  wizard.rs
src/streaming/: buffer.rs  mod.rs  sse_parser.rs
tests/: e2e_proxy.rs
