[package]
name = "mirageia"
version = "0.5.25"
edition = "2021"
description = "Intelligent pseudonymization proxy for LLM APIs"
license = "MIT"

[dependencies]
axum = "0.7"
bytes = "1"
futures-util = "0.3"
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Phase 2 — PII Detection
clap = { version = "4", features = ["derive"] }
dirs = "5"
ndarray = "0.17"
ort = { version = "2.0.0-rc.12", features = ["download-binaries", "ndarray"], optional = true }
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }

# Phase 3 — Pseudonymization
async-stream = "0.3"
aes-gcm = "0.10"
aho-corasick = "1"
regex = "1"
rand = "0.8"
sha2 = "0.10"
chrono = "0.4"
dialoguer = "0.11"
toml = "0.8"
url = "2"
toml_edit = "0.22"
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = "1"
tar = "0.4"
zeroize = { version = "1", features = ["derive"] }
lopdf = "0.34"
quick-xml = "0.36"
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
onnx = ["ort"]
